# ChangeLog for x11-wm/enlightenment
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.171 2012/12/22 00:47:09 tommy Exp $

*enlightenment-0.17.0 (22 Dec 2012)

  22 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_beta2.ebuild, -enlightenment-0.17.0_beta3.ebuild,
  +enlightenment-0.17.0.ebuild:
  Version bump, drop old

*enlightenment-0.17.0_beta3 (19 Dec 2012)

  19 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +enlightenment-0.17.0_beta3.ebuild:
  Version bump

*enlightenment-0.17.0_beta2 (14 Dec 2012)

  14 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_beta.ebuild, -enlightenment-0.17.0_beta1.ebuild,
  +enlightenment-0.17.0_beta2.ebuild:
  Version bump, drop old

*enlightenment-0.17.0_beta1 (13 Dec 2012)

  13 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_alpha8.ebuild, +enlightenment-0.17.0_beta1.ebuild:
  Version bump, drop old

*enlightenment-0.17.0_beta (08 Dec 2012)

  08 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_alpha7.ebuild, +enlightenment-0.17.0_beta.ebuild,
  metadata.xml:
  Version bump, drop old

  04 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  enlightenment-0.17.0_alpha8.ebuild:
  Require ecore[curl] for the shot module, thanks to Vinky for looking this up

*enlightenment-0.17.0_alpha8 (04 Dec 2012)

  04 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_alpha6.ebuild, +enlightenment-0.17.0_alpha8.ebuild:
  Version bump, drop old for enlightenment:0.17

*enlightenment-0.17.0_alpha7 (30 Nov 2012)

  30 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +enlightenment-0.17.0_alpha7.ebuild:
  Version bump for enlightenment:0.17

*enlightenment-0.17.0_alpha6 (27 Nov 2012)

  27 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>