@@ -12,7 +12,7 @@ DIST e16-1.0.8.tar.gz 2243485 SHA256 794d842ec30a29e0d6a85a3bd40120151c27419d77d
 DIST e16-1.0.9.tar.gz 2256543 SHA256 d435840a4a429cb22f241d7889e82827061f6ef5ccd9bbc8720af51dee053d27 SHA512 75dc4c784bb70a22b5baa6462024164a10bcea325aa479d2c856f8d214910f36fba865f78017f5c71847991015e7164ecb3959b9ee6d8e531c1b938bd5f61d2a WHIRLPOOL 1c11956dee0905a5465bbc900c3e5fb5ded702b091d3e1bb93738101a82efda82270e5b1fb530e3980077a53fecdb6136bbc4b9c564136bf82ec475fc851cdbc
 DIST enlightenment-0.17.0.tar.bz2 29213523 SHA256 0b1dbeb28b5c114816a7d2a3567b90ffe6eb9f49ab4939cad797ba59f35e525a SHA512 2eea1fdc0d02cb50441ac362bebe3d6300da8f2c30db80e8a9af539f0e6c904d509594075beaa6a50fdd88c0a6c238d5c031f55bfaaef422e1b01887c5e567cb WHIRLPOOL e52803a938c76fb21a74f29354ad95b6574118fbcb79f012ac9f09aad5a887b72bd62a3e55551f208bfb09dcf94c62b49b1c0a79833e1a75c7cfd38765ab1bfd
 EBUILD enlightenment-0.16.9999.ebuild 2003 SHA256 d3dbf359fd5dccf5acfc6dea699c0df051d172ae24061a5dceb681346e78845a SHA512 9bcd5e49a1a804611528b019b19d3e6adca816bd2d6607e5889ee69c7a7b1eddecfaeb905a4db8c4c95806f2ae78278024430322397ce7c841c5266ef280599d WHIRLPOOL 1f4faf945fc54a065493592712a892493c6350ccf5b3e420ace0d95bac873f300ea9f63193b214af22cbbd16889df815fe41a34bcd18e29124f501871db6190b
-EBUILD enlightenment-0.17.0.ebuild 2606 SHA256 98b8b064f412e8ab05a1bbb3be2f6a66009fcab18f1b6ed144921399c6c5d30f SHA512 aa98eb4aeb0778f91f50fbbdd0aa9f6db29128070d3c37cdeea60d9d1df2fb7d5561776d5893f7dc371a308b50dc11392bc23cb95f0db54d1cb5f39b0244402e WHIRLPOOL 3a686dbf751ee8b89ea4197e4a5afff8dfc1ade53e98725f846444a3829e78acc59363362fefd7406994a04d41c3ccf8e2f0876596510adcc13a16a89f4d8a16
+EBUILD enlightenment-0.17.0.ebuild 2606 SHA256 07776480b7f8f8068ae3538b35ccea33662daf66e0534bff9d1884c2603cea7b SHA512 e3590d0e9209e143ea6454c70d2e38b99c6e8014f1a70ea347be9b06660f3fb81ed337031968af786d28e572ec6808ebe0aeda3f65d311eeb722272f76edc099 WHIRLPOOL 60c386a35fb8f1220d0e05a768d19c689845ee07d6e9fd149823c2c0485300cf71c326b59a3e02fb560aad5387c7aedb6fb9eb2e086999082f47467dc0dec6f9
 EBUILD enlightenment-1.0.10.ebuild 2046 SHA256 d3e15849cd3de2cd3fcfe3cb4e7af4ea576364093883ff4e69b1798591d81cd4 SHA512 46cd8c89a54294d4becdb0bed0398837da5483332f216e45ee83e90b0b1c5da77d22fc2ca021c2dc9d49395428af1226fd46cdc0e6c87675d3afb3543d6fde9c WHIRLPOOL 55e44c81f1478149a75c38e00d5145ff8c39227219b376fdc0022de10b9083700532fa282a78621307e8a960007aa15a00dd6eee2c58dcac11f01eb7c3a0d3d9
 EBUILD enlightenment-1.0.11.ebuild 1999 SHA256 0142c5708a493bea999a430d1abead67765e3e411c38679f5ab055081c16591a SHA512 67fe871503bec138c4cab44df90479b69d1c6b49cf19252e88930a11a71851fd8f70e2672b2ebe3fed41e6d1aeffe7184d415fa9fc39b802e0b0aa8a2958236d WHIRLPOOL d6d75ee59a875881ca76c27a5a6c9b429b119a152d14ff4bdca4d99bc5e22bcd787eb771665dce8e15aa44140a5f47cf3f97920b60922f7217fb92a83bd410aa
 EBUILD enlightenment-1.0.2.ebuild 2042 SHA256 de36d0b8faf039656b1a12eca87a41881c8c3e9fe6136088cde6f54be9f6b9e1 SHA512 0b1644ad69d46ef138681fb6aba843daaa53b05ebe190c367eb02138d3104d7a60ae24a3718ae79c089f2d7bcb6a64ddaa4fa8bc152c5b43c8f353368c9fe640 WHIRLPOOL 81f6803d51898e22dbe41f8378f23061a9ceae30271ee5d3ed495fb41647bbcbd11e4dcb7eae5649118208b170116bfa102feea052804cc11be2d0141a7a6b91
@@ -20,14 +20,14 @@ EBUILD enlightenment-1.0.6.ebuild 2090 SHA256 a63507a1241d65353cb4bfd83ddb240a64
 EBUILD enlightenment-1.0.7.ebuild 2090 SHA256 5cfbf86f9aaa1a003619c6f1b92a16794c2ee660e24d82c00ed1ceecad915299 SHA512 eea2c7393d8c2ad6d82dc3efac682fe51b41d096c7c5e3ef9549537f9f1451cdbac678bd5eeac60e253b1894d98dfe56533d2c196ab45e03336ce055e313846a WHIRLPOOL 869d37f455b62c8d2d9113272ce70176ff8deed10ebe1a4d4c310aed808190499d483cc70eebd271113e450293e1c5e72bed86a80dc25498415b4d45ad033983
 EBUILD enlightenment-1.0.8.ebuild 2080 SHA256 4b868dc821bcedce6fbf659c1b970e8fb8787b19ed6afc29702eb3b5c038b6b7 SHA512 07e48fe099e1f9d41a318afb28e6aed9e33d6842f7129e9cfb7fd79c278f9b957c0d6f53364252fa549628adec5b0cf72b815f8e0fb4e02eb1ab0db31da04ee0 WHIRLPOOL b4776d891efb53abe366d2eaf31d51aa24607eb25efdc0f956bf097fcd63530186a7bbb7f006eee9f4f1b426f36478de6657c5351fff1a32ab5167446ec72828
 EBUILD enlightenment-1.0.9.ebuild 2090 SHA256 0326237b0c3630a139c778c726f4133cf97e20c652d6200c79a417d3db07c242 SHA512 d47b2da524cfb7d5903fa493ee4b2fc1a65bc4d4babeb3add467dba836b7ef3f5c6f30eb9d9d1fbcb6d95490374d35f274d6971017bdc8035ebda8fcbd12053b WHIRLPOOL 9eeec036ea494b69cbedaa49936ce19450e413cc017e92ac45185caf592df0ab8a5a166b35795fb4e2a85b0d32ab7f328fe7332728e1fbbc644807115d7dc89d
-MISC ChangeLog 24218 SHA256 19558bd564daeb3ac8cc80b4775ed71ff91776188b0cdd12a8223f5e5cc3f33c SHA512 da80e55b58abe29111a98f921a1c2ff5ef7c06cb5bb6d6073f268416f969c9d0099c03699500e174c9f0e023ec9f801de17f54040762105777160d9e6efb8424 WHIRLPOOL 11c74711c746306b64692b1b25e11245b77be7397cc063c6605c32068d142ccc8efa72e5409a5854e9f967e7bb5eb8919a633d2e0617a2b53e5a9a9f55399f14
+MISC ChangeLog 24357 SHA256 2557fe1a987144df2b3a309df417d66c9826e40322beec0ab63005b43ce604a9 SHA512 e41bf2508f9ec8711c43727a24408220231fe2be23fad673dfea4a7fb86e9c77197eb0f1fe17c7e6f68dda083717ef1b41b053fd14acdfb92cba71b5cb3c06c8 WHIRLPOOL 213277be04b659feb97a963bf18a01d29c247d04780479a5f7df93f5aa967cb4d7e684b3b75568690d90d005885e74bfce590ddfedf46fe8c1b992a3ebccc87b
 MISC metadata.xml 6521 SHA256 aa9f1588cecf3414d30054e9f193e0df6da0f37ef3675d91fd1d1727783d403d SHA512 7a3bc12d81a3a7901bafccf43d122633e0d75b842455192e19b14a3c67942796c612fc435735e6f2bcf7f74b1a25cbd9b1227161226cc420b94f104f2c021093 WHIRLPOOL 5d483c90ff5edf50e840cdced3876167af00a000c73d2e8157c35c094df9f926379b171a2bfbb2e118b6b682a0aefbf458316041ff677e3c07efe06cfc4d2d13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAlDVAxUACgkQG7kqcTWJkGdmgAP8CscKrLij/mxXBajVfMiPN5de
-l0RUUm2FewIJB2ZCjMCmKMeiMC6SWcY1ceRVBzp4tnaete3ba9Tk9gcQDbvb/w/L
-v+w8nFaWqWzOtONiY/nBgxS310AZOPQScmygGQhaNoitrGzOS0HNIfHise2lE9ll
-bPOVHGnVuHOB9CaWSNc=
-=qwBV
+iJwEAQEIAAYFAlDWF1oACgkQG7kqcTWJkGe4QQP/YrDtmrXS8XxgbDYZ6xZOA87C
+Bw35dLOA8ZVeFIgmwxggcwQhU82/0UgUWwe8fHvuLTU/xXjSJ2gvSbDZSbrygvsG
+buCobllulT9+LZqll3Xq3sKVAZX8exZoFQIPrGUx/DWIR6neY/UkrJ4C+OjalOeH
+7bMcarO7t2ao5DQyBF4=
+=jAKX
 -----END PGP SIGNATURE-----
