@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/enlightenment
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.171 2012/12/22 00:47:09 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.172 2012/12/22 20:25:55 tommy Exp $
+
+  22 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  enlightenment-0.17.0.ebuild:
+  Update dependencies to efl-libs release 1.7.4
 
 *enlightenment-0.17.0 (22 Dec 2012)
 
